<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Study Buddy</string>
    
    <!-- Activity Names -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_card">AddCard</string>
    <string name="title_activity_card_fragment">CardFragment</string>
    <string name="title_activity_popupdialog">Study!</string>
    <string name="title_activity_popupdialog2">Buddy!</string>
    <string name="title_activity_frequencies">Frequencies</string>
    <string name="title_activity_seekbar">Notification Setting</string>
    
    <!-- Action Names -->
    <string name="action_settings">Settings</string>
    <string name="action_view_developerspage">Developers Page</string>
    <string name="action_new">New Card</string> 
    <string name="action_notiSetting">Notification Setting</string>
    <string name="action_newGroup">New Deck</string>
    <string name="action_deleteGroup">Delete Deck</string>
    <string name="action_removeCard">Remove Card</string>
    
    <!-- Strings in Use in the App -->
    <string name="front">Front:</string>
    <string name="back">Back:</string>
    <string name="enter_back">Enter Back</string>
    <string name="enter_front">Enter Front</string>
    <string name="click_post">Post</string>
    <string name="click_cancel">Cancel</string>
    <string name="hello_world">Hello Snowman</string>
    <string name="emptydeck_message">No cards in this deck</string>
    <string name="drawer_open">Choose a Deck</string>
    <string name="drawer_close">A Deck has been Chosen</string>

    
</resources>