<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_removeCard"
        android:icon="@drawable/ic_action_remove"
        android:showAsAction="always"
        android:title="@string/action_removeCard"/>
    <item
        android:id="@+id/action_seekbar"
        android:icon="@drawable/ic_action_seekbar"
        android:showAsAction="always"
        android:title="@string/action_notiSetting"/>
    <item
        android:id="@+id/action_newGroup"
        android:icon="@drawable/ic_action_collection"
        android:showAsAction="always"
        android:title="@string/action_newGroup"/>
    <item
        android:id="@+id/action_deleteGroup"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_deleteGroup"/>
    <item
        android:id="@+id/action_view_developerspage"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_view_developerspage"/>

</menu>